@@ -1,5 +1,6 @@
 #ifndef RAT4_ERROR_H 
 #  define RAT4_ERROR_H 1
+BEGIN_C_DECLS
 
 #include <errno.h>  /* for the `errno' variable */
 #include <string.h> /* for `strerror()' function */
@@ -12,5 +13,6 @@ void synerr_eof(void);
 void synerr_include(const char *, ...);
 void synerr_fatal(const char *, ...);
 
+END_C_DECLS
 #endif
 /* vim: set ft=c ts=4 sw=4 et : */
