@@ -1,5 +1,7 @@
 #ifndef RAT4_INIT_H
 #  define RAT4_INIT_H 1
+BEGIN_C_DECLS
 void init(int, int, const char *);
+END_C_DECLS
 #endif
 /* vim: set ft=c ts=4 sw=4 et : */
