@@ -1,5 +1,6 @@
 #ifndef RAT4_IO_H 
 #  define RAT4_IO_H 1
+BEGIN_C_DECLS
 
 #include <stdio.h> /* for `*FILE' and `EOF' (at least) */
 
@@ -15,5 +16,6 @@ void outnum(int);
 void outcmnt(FILE *);
 void outasis(FILE *);
 
+END_C_DECLS
 #endif
 /* vim: set ft=c ts=4 sw=4 et : */
