@@ -4,10 +4,9 @@
 static int startlab; /* first label used by `labgen()' */
 static int label; /* next label returned by generate_labels */
 
-/*
- * labgen - generate n consecutive labels, return first one
- *
- */
+BEGIN_C_DECLS
+
+/* labgen - generate n consecutive labels, return first one */
 int
 labgen(int n)
 {
@@ -16,10 +15,7 @@ labgen(int n)
     return(olabel);
 }
 
-/*
- * set_starting_label - set starting label and nex label to lab
- *
- */
+/* set_starting_label - set starting label and nex label to lab */
 int
 set_starting_label(int lab)
 {
@@ -28,15 +24,15 @@ set_starting_label(int lab)
 }
 
 
-/*
- * can_label_conflict - tell if user label lab can conflict with labels
+/* can_label_conflict - tell if user label lab can conflict with labels
  *                      generated by ratfor
- *
  */
 bool
 can_label_conflict(int lab)
 {
     return(lab >= startlab? true : false);
 }
+
+END_C_DECLS
 
 /* vim: set ft=c ts=4 sw=4 et : */
