@@ -1,6 +1,8 @@
 #ifndef RAT4_LEXER_H
 #  define RAT4_LEXER_H 1
 #include "lex-symbols.h"
+BEGIN_C_DECLS
 int lex(char []);
+END_C_DECLS
 #endif
 /* vim: set ft=c ts=4 sw=4 et : */
